--- a/base/chats/chat.css
+++ b/base/chats/chat.css
@@ -72,7 +72,7 @@ body {
 
 .message {
   max-width: 75%;
-  padding: 12px 18px;
+  padding: 12px 18px 18px 18px;
   margin: 8px 0;
   border-radius: 18px;
   line-height: 1.5;
@@ -110,7 +110,7 @@ body {
 /* نوک حباب من */
 .me::after {
   bottom: 0;
-  right: -16px;
+  right: -10px;
   border-left: 16px solid #effdde;
 }
 
@@ -126,14 +126,9 @@ body {
 
 /* نوک حباب دیگر */
 .other::after {
-  content: "";
-  position: absolute;
-  bottom: 0.5px;
-  left: -16px;
-  width: 6px;
-  height: 0px;
+  bottom: 0px;
+  left: -10px;
   border-right: 16px solid #ffffff;
-  border-top: 16px solid transparent;
 }
 
 /* timestamp کم‌جا */
