--- a/base/chats/chat.css
+++ b/base/chats/chat.css
@@ -11,6 +11,11 @@
   src: url("./public/Shabnam.woff2");
 }
 
+@font-face {
+  font-family: "vazirBold";
+  src: url("../fonts/Vazir-Bold-FD-WOL.woff2");
+}
+
 body {
   font-family: "Shabnam", sans-serif;
   margin: 0;
@@ -186,6 +191,11 @@ body {
   max-width: 100%;
   height: auto;
   overflow: hidden;
+}
+
+strong {
+  font-weight: 600;
+  font-family: "vazirBold";
 }
 
 
